--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==3.0.1
 Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -20,6 +21,7 @@ psycopg==3.2.12
 psycopg-binary==3.2.12
 pydantic==2.12.4
 pydantic_core==2.41.5
+PyJWT==2.10.1
 python-dotenv==1.2.1
 requests==2.32.5
 setuptools==80.9.0
